--- a/BolApp/MainPage.xaml
+++ b/BolApp/MainPage.xaml
@@ -8,43 +8,25 @@
               Padding="{OnPlatform iOS='30,60,30,30', Default='30'}">
 
             <Label 
-                Text="Hello, World!"
+                Text="Welcome to Bol!"
                 Grid.Row="0"
                 SemanticProperties.HeadingLevel="Level1"
                 FontSize="32"
                 HorizontalOptions="Center" />
 
-            <Label 
-                Text="Welcome to .NET Multi-platform App UI"
-                Grid.Row="1"
-                SemanticProperties.HeadingLevel="Level1"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
-
-            <Label 
-                Text="Current count: 0"
-                Grid.Row="2"
-                FontSize="18"
-                FontAttributes="Bold"
-                x:Name="CounterLabel"
-                HorizontalOptions="Center" />
-
+            <Image Grid.Row="1"
+                   Source="bol.jpg"
+                   SemanticProperties.Description="Welcome to Bol"
+                   WidthRequest="250"
+                   HeightRequest="310"
+                   HorizontalOptions="Center" />
+            
             <Button 
-                Text="Click me"
+                Text="Let's create your codename"
                 FontAttributes="Bold"
-                Grid.Row="3"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
+                Grid.Row="2"
+                Clicked="NavigateToCodename"
                 HorizontalOptions="Center" />
-
-            <Image Grid.Row="4"
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                WidthRequest="250"
-                HeightRequest="310"
-                HorizontalOptions="Center" />
-
         </Grid>
     </ScrollView>
 </ContentPage>
