--- a/BolApp/MainPage.xaml
+++ b/BolApp/MainPage.xaml
@@ -1,6 +1,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BolApp.MainPage"
+             xmlns:viewModel="clr-namespace:BolApp.ViewModels"
+             x:DataType="viewModel:MainPageViewModel"
              BackgroundColor="{DynamicResource SecondaryColor}">
 
     <ScrollView>
@@ -25,7 +27,7 @@
                 Text="Let's create your codename"
                 FontAttributes="Bold"
                 Grid.Row="2"
-                Clicked="NavigateToCodename"
+                Command="{Binding NavigateToCodenamePage}"
                 HorizontalOptions="Center" />
         </Grid>
     </ScrollView>
