--- a/BolWallet/MainPage.xaml
+++ b/BolWallet/MainPage.xaml
@@ -1,8 +1,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BolApp.MainPage"
-             xmlns:viewModel="clr-namespace:BolApp.ViewModels"
-             x:DataType="viewModel:MainPageViewModel"
+             xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
+             x:Class="BolWallet.MainPage"
+             x:DataType="viewModels:MainPageViewModel"
              BackgroundColor="{DynamicResource SecondaryColor}">
 
     <ScrollView>
