--- a/BolWallet/Views/CodenamePage.xaml
+++ b/BolWallet/Views/CodenamePage.xaml
@@ -1,20 +1,19 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
-             x:Class="BolWallet.CodenamePage"
+             xmlns:dxdf="clr-namespace:DevExpress.Maui.DataForm;assembly=DevExpress.Maui.Editors"
+             x:Class="BolWallet.Views.CodenamePage"
              x:DataType="viewModels:CodenameViewModel"
              BackgroundColor="{DynamicResource SecondaryColor}">
     <ScrollView>
-
-        <Grid RowSpacing="25" RowDefinitions="Auto,Auto,Auto,Auto,*"
-              Padding="{OnPlatform iOS='30,60,30,30', Default='30'}">
-
-            <Label
-                Text="Lets create your codename"
-                Grid.Row="0"
-                SemanticProperties.HeadingLevel="Level2"
-                FontSize="20"
-                HorizontalOptions="Center" />
-        </Grid>
+        <StackLayout>
+            <dxdf:DataFormView x:Name="CodenameForm"
+                               EditorLabelWidth="40"
+                               DataObject="{Binding Form}"
+                               EditorLabelColor="Gray"
+                               GroupHeaderBackgroundColor="#e9e9e9"
+                               GroupHeaderTextColor="#f05b41"
+                               ValidationMode="LostFocus"/>
+        </StackLayout>
     </ScrollView>
 </ContentPage>
