--- a/BolWallet/Views/CodenamePage.xaml
+++ b/BolWallet/Views/CodenamePage.xaml
@@ -1,19 +1,21 @@
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
-             xmlns:dxdf="clr-namespace:DevExpress.Maui.DataForm;assembly=DevExpress.Maui.Editors"
-             x:Class="BolWallet.Views.CodenamePage"
-             x:DataType="viewModels:CodenameViewModel"
-             BackgroundColor="{DynamicResource SecondaryColor}">
+<ContentPage
+    x:Class="BolWallet.Views.CodenamePage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:dxdf="clr-namespace:DevExpress.Maui.DataForm;assembly=DevExpress.Maui.Editors"
+    xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
+    x:DataType="viewModels:CodenameViewModel"
+    BackgroundColor="{DynamicResource SecondaryColor}">
     <ScrollView>
         <StackLayout>
-            <dxdf:DataFormView x:Name="CodenameForm"
-                               EditorLabelWidth="40"
-                               DataObject="{Binding Form}"
-                               EditorLabelColor="Gray"
-                               GroupHeaderBackgroundColor="#e9e9e9"
-                               GroupHeaderTextColor="#f05b41"
-                               ValidationMode="LostFocus"/>
+            <dxdf:DataFormView
+                x:Name="CodenameForm"
+                DataObject="{Binding Form}"
+                EditorLabelColor="Gray"
+                EditorLabelWidth="40"
+                GroupHeaderBackgroundColor="#e9e9e9"
+                GroupHeaderTextColor="#f05b41"
+                ValidationMode="LostFocus" />
         </StackLayout>
     </ScrollView>
 </ContentPage>
