--- a/BolWallet/Views/MainPage.xaml
+++ b/BolWallet/Views/MainPage.xaml
@@ -1,34 +1,39 @@
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
-             x:Class="BolWallet.MainPage"
-             x:DataType="viewModels:MainPageViewModel"
-             BackgroundColor="{DynamicResource SecondaryColor}">
+<ContentPage
+    x:Class="BolWallet.MainPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
+    x:DataType="viewModels:MainPageViewModel"
+    BackgroundColor="{DynamicResource SecondaryColor}">
 
     <ScrollView>
-        <Grid RowSpacing="25" RowDefinitions="Auto,Auto,Auto,Auto,*"
-              Padding="{OnPlatform iOS='30,60,30,30', Default='30'}">
+        <Grid
+            Padding="{OnPlatform iOS='30,60,30,30',
+                                 Default='30'}"
+            RowDefinitions="Auto,Auto,Auto,Auto,*"
+            RowSpacing="25">
 
-            <Label 
-                Text="Welcome to Bol!"
+            <Label
                 Grid.Row="0"
-                SemanticProperties.HeadingLevel="Level1"
                 FontSize="32"
-                HorizontalOptions="Center" />
+                HorizontalOptions="Center"
+                SemanticProperties.HeadingLevel="Level1"
+                Text="Welcome to Bol!" />
 
-            <Image Grid.Row="1"
-                   Source="bol.jpg"
-                   SemanticProperties.Description="Welcome to Bol"
-                   WidthRequest="250"
-                   HeightRequest="310"
-                   HorizontalOptions="Center" />
-            
-            <Button 
-                Text="Let's create your codename"
-                FontAttributes="Bold"
+            <Image
+                Grid.Row="1"
+                HeightRequest="310"
+                HorizontalOptions="Center"
+                SemanticProperties.Description="Welcome to Bol"
+                Source="bol.jpg"
+                WidthRequest="250" />
+
+            <Button
                 Grid.Row="2"
                 Command="{Binding NavigateToCodenamePage}"
-                HorizontalOptions="Center" />
+                FontAttributes="Bold"
+                HorizontalOptions="Center"
+                Text="Let's create your codename" />
         </Grid>
     </ScrollView>
 </ContentPage>
