--- a/BolWallet/Views/CodenamePage.xaml
+++ b/BolWallet/Views/CodenamePage.xaml
@@ -15,6 +15,7 @@
                 EditorLabelWidth="40"
                 GroupHeaderBackgroundColor="#e9e9e9"
                 GroupHeaderTextColor="#f05b41"
+                PickerSourceProvider="{Binding CodenameFormDataProvider}"
                 ValidationMode="LostFocus" />
         </StackLayout>
     </ScrollView>
