Add attributes at CodenameForm in order to improve the UI

--- a/BolWallet/Views/CodenamePage.xaml
+++ b/BolWallet/Views/CodenamePage.xaml
@@ -11,9 +11,8 @@
             <dxdf:DataFormView
                 x:Name="CodenameForm"
                 DataObject="{Binding Form}"
-                EditorLabelColor="Gray"
-                EditorLabelWidth="40"
-                GroupHeaderBackgroundColor="#e9e9e9"
+                EditorLabelColor="Grey"
+                EditorLabelFontAttributes="Italic"
                 GroupHeaderTextColor="#f05b41"
                 PickerSourceProvider="{Binding CodenameFormDataProvider}"
                 ValidationMode="LostFocus" />
