--- a/BolWallet/Views/MainPage.xaml
+++ b/BolWallet/Views/MainPage.xaml
@@ -25,7 +25,7 @@
                 HeightRequest="310"
                 HorizontalOptions="Center"
                 SemanticProperties.Description="Welcome to Bol"
-                Source="bol.jpg"
+                Source="bol_logo"
                 WidthRequest="250" />
 
             <Button
@@ -33,7 +33,7 @@
                 Command="{Binding NavigateToCodenamePage}"
                 FontAttributes="Bold"
                 HorizontalOptions="Center"
-                Text="Let's create your codename" />
+                Text="Let's get started" />
         </Grid>
     </ScrollView>
 </ContentPage>
