--- a/BolWallet/Views/CodenamePage.xaml
+++ b/BolWallet/Views/CodenamePage.xaml
@@ -4,14 +4,17 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:controls="clr-namespace:DevExpress.Maui.Controls;assembly=DevExpress.Maui.Controls"
     xmlns:dxdf="clr-namespace:DevExpress.Maui.DataForm;assembly=DevExpress.Maui.Editors"
+    xmlns:dxe="clr-namespace:DevExpress.Maui.Editors;assembly=DevExpress.Maui.Editors"
     xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
     Title="Create your CodeName"
     x:DataType="viewModels:CodenameViewModel"
     BackgroundColor="{DynamicResource SecondaryColor}">
     <ScrollView>
         <StackLayout>
+
             <dxdf:DataFormView
                 x:Name="CodenameForm"
+                CommitMode="PropertyChanged"
                 DataObject="{Binding Form}"
                 EditorLabelColor="Grey"
                 EditorLabelFontFamily="MaterialIcons-Regular"
@@ -21,9 +24,18 @@
                 EditorLabelMinWidth="12"
                 GroupHeaderTextColor="#f05b41"
                 PickerSourceProvider="{Binding CodenameFormDataProvider}"
-                ValidationMode="LostFocus" />
-            <controls:SimpleButton Command="{Binding SubmitCommand}" Text="Submit" />
                 ValidationMode="PropertyChanged" />
+            <controls:SimpleButton
+                Margin="8,16"
+                Command="{Binding SubmitCommand}"
+                Text="Submit" />
+            <dxe:TextEdit
+                Margin="8,16"
+                IsLabelFloating="True"
+                IsReadOnly="True"
+                LabelText="Generated codename"
+                Text="{Binding Codename}"
+                TextFontSize="15" />
         </StackLayout>
     </ScrollView>
 </ContentPage>
