--- a/BolWallet/Views/CreateEdiPage.xaml
+++ b/BolWallet/Views/CreateEdiPage.xaml
@@ -22,20 +22,119 @@
 				<ColumnDefinition Width="Auto"/>
 				<ColumnDefinition Width="Auto"/>
 			</Grid.ColumnDefinitions>
-
 			<Label Margin="10,0,10,0"  Text="Identity Card" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
 				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="IdentityCardPath"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
 				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="IdentityCardPath"  Source="camera.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
 			</StackLayout>
 			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiFormPaths.IdentityCardPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
-			<Label Text="*Required" Grid.Column="3" HorizontalOptions="Center"  TextColor="Red">
-				<Label.Triggers>
-					<DataTrigger TargetType="Label"   Value="False">
-						<Setter Property="IsVisible" Value="True" />
-					</DataTrigger>
-				</Label.Triggers>
-			</Label>
+			<Label Text="*Required" Grid.Column="3" HorizontalOptions="Center"  TextColor="Red"></Label>
+		</Grid>
+		<Grid Margin="0,0,0,10" >
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="150"/>
+				<ColumnDefinition Width="Auto"/>
+				<ColumnDefinition Width="Auto"/>
+			</Grid.ColumnDefinitions>
+			<Label Margin="10,0,10,0"  Text="Driving License" FontSize="18" VerticalOptions="Center" />
+			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="DrivingLicencePath"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="DrivingLicencePath"  Source="camera.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
+			</StackLayout>
+			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiFormPaths.DrivingLicencePath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label Text="*Required" Grid.Column="3" HorizontalOptions="Center"  TextColor="Red"></Label>
+		</Grid>
+		<Grid Margin="0,0,0,10" >
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="150"/>
+				<ColumnDefinition Width="Auto"/>
+				<ColumnDefinition Width="Auto"/>
+			</Grid.ColumnDefinitions>
+			<Label Margin="10,0,10,0"  Text="Passport" FontSize="18" VerticalOptions="Center" />
+			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="PassportPath"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="PassportPath"  Source="camera.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
+			</StackLayout>
+			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiFormPaths.PassportPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label Text="*Required" Grid.Column="3" HorizontalOptions="Center"  TextColor="Red"></Label>
+		</Grid>
+		<Grid Margin="0,0,0,10" >
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="150"/>
+				<ColumnDefinition Width="Auto"/>
+				<ColumnDefinition Width="Auto"/>
+			</Grid.ColumnDefinitions>
+			<Label Margin="10,0,10,0"  Text="Photo" FontSize="18" VerticalOptions="Center" />
+			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="Photo"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="Photo"  Source="camera.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
+			</StackLayout>
+			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiFormPaths.PhotoPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+		</Grid>
+		<Grid Margin="0,0,0,10" >
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="150"/>
+				<ColumnDefinition Width="Auto"/>
+				<ColumnDefinition Width="Auto"/>
+			</Grid.ColumnDefinitions>
+			<Label Margin="10,0,10,0"  Text="Nin Certificate" FontSize="18" VerticalOptions="Center" />
+			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="NinCertificatePath"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="NinCertificatePath"  Source="camera.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
+			</StackLayout>
+			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiFormPaths.NinCertificatePath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+		</Grid>
+		<Grid Margin="0,0,0,10" >
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="150"/>
+				<ColumnDefinition Width="Auto"/>
+				<ColumnDefinition Width="Auto"/>
+			</Grid.ColumnDefinitions>
+			<Label Margin="10,0,10,0"  Text="Birth Certificate" FontSize="18" VerticalOptions="Center" />
+			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="BirthCertificatePath"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="BirthCertificatePath"  Source="camera.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
+			</StackLayout>
+			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiFormPaths.BirthCertificatePath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+		</Grid>
+		<Grid Margin="0,0,0,10" >
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="150"/>
+				<ColumnDefinition Width="Auto"/>
+				<ColumnDefinition Width="Auto"/>
+			</Grid.ColumnDefinitions>
+			<Label Margin="10,0,10,0"  Text="Telephone Bill" FontSize="18" VerticalOptions="Center" />
+			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="TelephoneBillPath"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="TelephoneBillPath"  Source="camera.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
+			</StackLayout>
+			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiFormPaths.TelephoneBillPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+		</Grid>
+		<Grid Margin="0,0,0,10" >
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="150"/>
+				<ColumnDefinition Width="Auto"/>
+				<ColumnDefinition Width="Auto"/>
+			</Grid.ColumnDefinitions>
+			<Label Margin="10,0,10,0"  Text="Other" FontSize="18" VerticalOptions="Center" />
+			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="OtherPath"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="OtherPath"  Source="camera.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
+			</StackLayout>
+			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiFormPaths.OtherPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+		</Grid>
+		<Grid Margin="0,0,0,10" >
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="150"/>
+				<ColumnDefinition Width="Auto"/>
+				<ColumnDefinition Width="Auto"/>
+			</Grid.ColumnDefinitions>
+			<Label Margin="10,0,10,0"  Text="Voice" FontSize="18" VerticalOptions="Center" />
+			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="VoicePath"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="TelephoneBillPath"  Source="record.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
+			</StackLayout>
+			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiFormPaths.TelephoneBillPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
 		<Button   Grid.Column="1" VerticalOptions="EndAndExpand" Text="Submit" BackgroundColor="#063289" Margin="20, 0, 20, 20"  HorizontalOptions="Fill"  Command="{Binding SubmitCommand}"/>
 	</StackLayout>
